# entrega-trabajo-final-ciencia-datos-1

./: AGENTS.md  README.md  skills-lock.json
oulad-ml-project/: .gitignore  HIPOTESIS_PRINCIPAL.md  README.md  pyproject.toml
oulad-ml-project/scripts/: run_oulad_pipeline.sh  setup_oulad_environment.sh
oulad-ml-project/sql/: oulad_training_mart.sql
oulad-ml-project/src/oulad_ml_project/: __init__.py  data_generator.py  data_sources.py  eda.py  feature_contract.py  inference.py  ml_pipeline.py  preprocessing.py  risk_model.py  train_ml.py
oulad-ml-project/tests/: test_eda.py  test_excel_inference.py  test_training_artifacts.py
