[project]
name = "oulad-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jose-matos-9281", email = "58991817+jose-matos-9281@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
create-data = "oulad_ml_project.data_generator:main"
ml_pipeline = "oulad_ml_project.ml_pipeline:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"


