[project]
name = "oulad-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jose-matos-9281", email = "58991817+jose-matos-9281@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
create-data = "oulad_ml_project.data_generator:main"
eda = "oulad_ml_project.eda:main"
ml_pipeline = "oulad_ml_project.ml_pipeline:main"
train-inference-model = "oulad_ml_project.inference:main_train"
predict-excel = "oulad_ml_project.inference:main_predict"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
